# pathql

./: .ai-context.md  .coverage  .gitignore  AI_CONTEXT.md  CHANGELOG.md  README.md  pylint.ini  pyproject.toml  pytest.ini
src/pathql/: __init__.py  __main__.py  main.py  pathql.py  query.py  result_fields.py  result_scalars.py  result_set.py  utils.py
src/pathql/actions/: __init__.py  delete.py  file_actions.py  utils.py  zip.py
src/pathql/cli/: pql.py
src/pathql/filters/: __init__.py  access.py  age.py  alias.py  attribute_filter.py  base.py  between.py  callback.py  date_filename.py  datetime_parts.py  datetimes_.py  file.py  file_age.py  file_type.py  fileage.py  filedate.py  fileext.py  name.py  proxy_not_needed.py  size.py  stat_proxy.py  stat_proxy_guard.py  stem.py  suffix.py  type.py
src/pathql/presets/: dates.py
test/: _stat_proxy_test_util.py  conftest.py  conftest_size.py  test_access.py  test_access_matrix.py  test_action_files.py  test_action_parallel.py  test_action_parallel_edge.py  test_action_zip.py  test_actions_delete.py  test_actions_zip.py  test_age.py  test_age_attr_short_scale.py  test_age_boundaries.py  test_age_extra.py  test_between.py  test_callback.py  test_date_filename.py  test_datetime.py  test_datetime_parts.py  test_file.py  test_file_actions.py  test_fileage.py  test_fileage_ops.py  test_fileext.py  test_filter_access.py  test_filter_access_matrix.py  test_filter_age.py  test_filter_age_attr_short_scale.py  test_filter_age_boundaries.py  test_filter_all_any.py  test_filter_base.py  test_filter_between.py  test_filter_bool_short_circuit.py  test_filter_callback.py  test_filter_fileage.py  test_filter_filedate.py  test_filter_normalize_path.py  test_filter_size.py  test_filter_size_ops.py  (+32 more)
