[project]
name = "pathql"
version = "0.1.0"
description = "A Python project for pathql."
authors = [
	{name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-cov"
]

[tool.pytest.ini_options]
addopts = "--cov=src/pathql --cov-report=xml:coverage.xml"

