[project]
name = "pathql"
version = "0.0.4"
description = "PathQL: A Python project for declarative file system querying."
authors = [
	{name = "Chuck Bass", email = "chuck@acrocad.net"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"python-dateutil"
]

license = {file = "LICENSE"}
keywords = ["pathlib", "query", "filesystem"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-cov",
	"mypy"
]

[tool.pytest.ini_options]
addopts = "--cov=src/pathql --cov-report=xml:coverage.xml"
