[project]
name = "pathql"
version = "0.0.7"
description = "PathQL: A Python project for declarative file system querying."
authors = [
	{name = "Chuck Bass", email = "chuck@acrocad.net"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"python-dateutil"
]

# Specify license using SPDX identifier and include LICENSE file
license = {text = "MIT"}
keywords = ["pathlib", "query", "filesystem"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries",
	"Natural Language :: English",
	"License :: OSI Approved :: MIT License"
]

[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-cov",
	"mypy"
]

[tool.pytest.ini_options]
addopts = "--cov=src/pathql --cov-report=xml:coverage.xml"
